simplified directory structure and fixed swagger errors
