# docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "This API takes a range of decimals and converts it to roman numerals",
-        "title": "Roman Numeral Convertor API",
+        "title": "Roman Numeral Converter API",
         "contact": {
             "name": "Asutosh",
             "email": "asutosh.satapathy@gmail.com"
@@ -10,41 +10,69 @@
         "version": "1.0"
     },
     "host": "localhost:8001",
-    "basePath": "/",
+    "basePath": "/api/v1",
     "paths": {
         "/convert": {
             "get": {
-                "description": "Get the roman numeral equivalent for a given decimal(s) in ascending order",
+                "description": "Convert a comma-separated list of numbers to their corresponding Roman numeral representations.",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "romans"
+                "summary": "Convert numbers to Roman numerals",
+                "operationId": "convertNumbersToRoman",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Comma-separated list of integers to be converted",
+                        "name": "numbers",
+                        "in": "query",
+                        "required": true
+                    }
                 ],
-                "summary": "Get Roman Numeral",
                 "responses": {
                     "200": {
-                        "description": "Successfully retrieved Roman Numerals",
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.RomanNumeral"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.RomanNumeral"
+                            }
                         }
                     }
                 }
             },
             "post": {
-                "description": "Get the roman numeral equivalent for given ranges in ascending order",
+                "description": "Convert multiple ranges of numbers to their corresponding Roman numeral representations.",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "romans"
+                "summary": "Convert ranges of numbers to Roman numerals",
+                "operationId": "convertRangesToRoman",
+                "parameters": [
+                    {
+                        "description": "Array of number ranges",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.RangesPayload"
+                        }
+                    }
                 ],
-                "summary": "Get Roman Numerals for Ranges of Numbers",
                 "responses": {
                     "200": {
-                        "description": "Successfully retrieved Roman Numerals",
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.RomanNumeral"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.RomanNumeral"
+                            }
                         }
                     }
                 }
@@ -52,6 +80,39 @@
         }
     },
     "definitions": {
+        "models.NumberRange": {
+            "type": "object",
+            "required": [
+                "max",
+                "min"
+            ],
+            "properties": {
+                "max": {
+                    "description": "The maximum value of the range (inclusive).",
+                    "type": "integer",
+                    "example": 20
+                },
+                "min": {
+                    "description": "The minimum value of the range (inclusive).",
+                    "type": "integer",
+                    "example": 10
+                }
+            }
+        },
+        "models.RangesPayload": {
+            "type": "object",
+            "required": [
+                "ranges"
+            ],
+            "properties": {
+                "ranges": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.NumberRange"
+                    }
+                }
+            }
+        },
         "models.RomanNumeral": {
             "type": "object",
             "properties": {
